Placed a healing potion in both stores, and moved the greater mana regen talisman to the forest store.

--- a/data/level/Forest/tempo-village-house-store.cfg
+++ b/data/level/Forest/tempo-village-house-store.cfg
@@ -142,11 +142,26 @@
 			"y": 151
 		},
 		{
+			"_uuid": "ef1d4d411b834cbc8410543a545f22b9",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_67af979",
+			"type": "store_item",
+			"property_data": {
+				"settable_item_id": "@eval enum item_greater_mana_talisman"
+			},
+			"x": -93,
+			"y": 257
+		},
+		{
 			"_uuid": "315bdc30568f4080b0b7f95e10cb3f9f",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_68d788ff",
 			"type": "store_item",
+			"property_data": {
+				"settable_item_id": "@eval enum item_health_potion"
+			},
 			"x": 911,
 			"y": 254
 		},
