--- a/data/level/Seaside/chopple-shop-interior.cfg
+++ b/data/level/Seaside/chopple-shop-interior.cfg
@@ -291,7 +291,7 @@
 			"label": "_67af979",
 			"type": "store_item",
 			"property_data": {
-				"settable_item_id": "@eval enum item_greater_mana_talisman"
+				"settable_item_id": "@eval enum item_health_potion"
 			},
 			"x": 880,
 			"y": 343
