--- a/data/object_prototypes/general/buyable_item.cfg
+++ b/data/object_prototypes/general/buyable_item.cfg
@@ -1,6 +1,6 @@
 {
 id: "buyable_item",
-zorder: -5,
+zorder: "@include data/zorder.cfg:interior_decor",
 is_strict: true,
 prototype: ["item_acquirable"],
 respawns: true,
