--- a/data/items.cfg
+++ b/data/items.cfg
@@ -401,6 +401,7 @@
 		description: "~Chug and heal.~",
 		short_store_description: "[~This is a health potion which will refill your hitpoints.~]",
 		count_limit: 2,
+		price: 75,
 		item_category: "@eval enum secondary_item",
 		anim_rect: [160,57,184,81],
 		anim_frame_count: 1,
