If the player uses up the last of an item, then deselect it as the active item.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -459,14 +459,32 @@ properties: {
 	add_item: "def(InventoryItemType item_name, int new_count) -> commands
 		[
 			add(item_quantities[item_name],  new_count) ;
-			custom_post_item_amount_modification_commands,
+			custom_post_item_amount_modification_commands ;
+			handle_emptying_item_stack(item_name)
 		]",
 
 	set_item_amount: "def(InventoryItemType item_name, int new_count) -> commands
 		[
 			set(item_quantities[item_name],  new_count) ;
-			custom_post_item_amount_modification_commands ,
+			custom_post_item_amount_modification_commands ;
+			handle_emptying_item_stack(item_name)
 		]",
+		
+	handle_emptying_item_stack: "def(InventoryItemType item_name) -> commands
+		[
+			/*
+				Check if any of the current active items match the type we just (potentially) emptied, and de-select them if that's the case.
+			*/
+			if(item_quantities[item_name] = 0, [
+				if(current_secondary_item = item_name,
+					set(current_secondary_item, enum item_null)
+				),
+				if(current_ability = item_name,
+					set(current_ability, enum item_tongue)  //<-- I'm a little iffy about treating item_tongue as our magic default, but oh well
+				),
+			])
+		]",
+	
 
 	item_quantities: { type: "{InventoryItemType -> int }", init: "{ }" },
 
