Set up potions to not exhaust their stock if you're allowed to buy more than one.  Dummied out the 'increasing cost per units purchased' for the time being.

--- a/data/object_prototypes/general/item_acquirable.cfg
+++ b/data/object_prototypes/general/item_acquirable.cfg
@@ -131,6 +131,8 @@ properties: {
 	removal_time: "int :: 201", //only really customized for stuff that has a very fast size_dilation, and isn't doing the interlude thing.
 	do_custom_acquisition_anim: "commands :: if('acquired' in available_animations, set(animation, 'acquired'))",
 	
+	remove_item_if_appropriate: "commands :: schedule(removal_time, die())",  //In almost all cases, when you 'acquire' something, it's removed from the level.  In a few cases, like shops, we actually override this and let it stick around so you can buy more than one.
+	
 #-------------------------- acquisition handlers --------------------------#
 	do_acquisition: "commands ::
 		if((not been_acquired), [
@@ -139,7 +141,7 @@ properties: {
 			if(not should_lock_player_and_do_fancy_acquisition_interlude, do_basic_cosmetic_acquisition_fx),
 			[set(velocity_x, 0),set(velocity_y, 0)],
 			schedule(1, bind_command( def() fire_event('acquired') )),
-			schedule(removal_time, die())
+			remove_item_if_appropriate,
 		])",
 	
 	do_present_item: "def(obj transient_object receiving_character) -> commands
@@ -148,7 +150,7 @@ properties: {
 			if(should_lock_player_and_do_fancy_acquisition_interlude, do_item_acquisition_interlude_sequence(receiving_character)),
 			if(not should_lock_player_and_do_fancy_acquisition_interlude, do_basic_cosmetic_acquisition_fx),
 			[set(velocity_x, 0),set(velocity_y, 0)],
-			schedule(removal_time, die())
+			remove_item_if_appropriate,
 		])",
 	
 	
