--- a/data/object_prototypes/general/buyable_item.cfg
+++ b/data/object_prototypes/general/buyable_item.cfg
@@ -16,7 +16,7 @@ properties: {
 
 
 #-------------------------- item metadata --------------------------#
-	final_price: "int :: price * (1 + number_owned)",  //<---  TODO?  Some sort of exponential cost increase?
+	final_price: "int :: price", // * (1 + number_owned)",  //<---  TODO?  Some sort of exponential cost increase?
 	quantity_being_sold_per_buy: "int :: 1",
 	price: "int :: item_info.price",
 	costs_trophies_instead_of_coins: "bool :: item_info.costs_trophies_instead_of_coins",
@@ -85,10 +85,18 @@ properties: {
 				])
 			]
 		)",
-			
+	
+	
+	remove_item_if_appropriate: "commands :: if((number_owned + 1) >= max_owned,  //Note:  The +1 is because the item doesn't count as acquired at the time of execution.
+		schedule(removal_time, die()),
+		[
+			schedule(removal_time, die()),
+			spawn(me.type, me.mid_x, me.mid_y, {settable_item_id: me.settable_item_id}),
+		]
+	)", 
 },
 
-on_create: "[if(number_owned >= max_owned, [debug(me.item_id),remove_object(me)]),set(bob_offset, 1d100)]",
+on_create: "[if(number_owned >= max_owned, remove_object(me)),set(bob_offset, 1d100)]",
 on_interact: "[fire_event(level.player, 'start_interact')]",
 on_acquired: "frogatto.add_item(item_id, quantity_being_sold_per_buy)",
 on_bought: "do_acquisition",
