--- a/data/level/Forest/caustic-cauchemar.cfg
+++ b/data/level/Forest/caustic-cauchemar.cfg
@@ -686,6 +686,36 @@
 			"type": "rock_background_cubic1",
 			"x": 1736,
 			"y": -1429
+		},
+		{
+			"_uuid": "6d0c6b704f3f4b1eaec6911b67edb807",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_40bb752a",
+			"property_data": {
+				"_x2_bound": 2072,
+				"_x_bound": 1972,
+				"_y2_bound": -1291,
+				"_y_bound": -1591
+			},
+			"type": "save_statue",
+			"x": 1992,
+			"y": -1421
+		},
+		{
+			"_uuid": "88e9e243283c42fdb430d483e00cf5b2",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5a4cdac4",
+			"property_data": {
+				"_x2_bound": 470,
+				"_x_bound": 370,
+				"_y2_bound": -908,
+				"_y_bound": -1208
+			},
+			"type": "save_statue",
+			"x": 390,
+			"y": -1038
 		}
 	],
 	"dimensions": [-2304,-1952,2591,799],
