A couple of final swamp level touchups.

--- a/data/level/Forest/caustic-cauchemar.cfg
+++ b/data/level/Forest/caustic-cauchemar.cfg
@@ -716,6 +716,15 @@
 			"type": "save_statue",
 			"x": 390,
 			"y": -1038
+		},
+		{
+			"_uuid": "f98ff239d9dc4d2e94ae2f51d861b6a1",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_338e1fa5",
+			"type": "fountain_of_health",
+			"x": 21,
+			"y": -1278
 		}
 	],
 	"dimensions": [-2304,-1952,2591,799],
