--- a/data/level/Forest/corrosive-climb.cfg
+++ b/data/level/Forest/corrosive-climb.cfg
@@ -1261,23 +1261,7 @@
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -1434,30 +1418,14 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"zorder": "exterior_background_tiles"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "wooden_bridge_tile_rear_parts"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",
@@ -1574,23 +1542,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"zorder": "wooden_scaffolding_background_behind_trees"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -1600,23 +1552,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"zorder": "liquid_particle_effects"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -1873,7 +1809,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,,,fbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
-,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
+,
 ,
 ,
 ,
@@ -1935,101 +1871,17 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"zorder": "wooden_scaffolding_background"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "mushrooms_background"
+			"zorder": "rail_tracks"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_decor"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -2039,23 +1891,37 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"zorder": "player"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_decor"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "interior_decor"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
+		},
+		{
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -2160,23 +2026,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"zorder": "mushrooms_foreground"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -2186,23 +2036,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"zorder": "water_surface"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
