Wired in new particles for the zoomer enemy.

--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -138,6 +138,7 @@ properties: {
 		'arcane_shot_contrail': ['arcane_shot_contrail'],
 		'acid_shot_contrail': ['acid_motes_small'],
 		'smoky_fire_shot_contrail': ['2_fire_med', '0_fire_smoke'],
+		'electric_sparks_dancing': ['electric_sparks', 'electric_sparks_small', 'blue_energy_motes_small'],
 	}",
 
 #-------------------------- vars for customization --------------------------#
@@ -1054,6 +1055,39 @@ particle_system: [
 			frames: 6,
 			duration: 4,
 			pad: 3,
+		}],
+	},
+	{
+		id: "electric_sparks_small",
+		type: "simple",
+		spawn_rate: 250,
+		time_to_live: 20,
+		min_x: -10,
+		max_x: 10,
+		min_y: -10,
+		max_y: 10,
+		velocity_y: -500,
+		velocity_x: -500,
+		velocity_x_random: 1000,
+		velocity_y_random: 1000,
+		animation: [{
+			"@base": true,
+			id: "sparkle",
+			image: "effects/electric-sparks1.png",
+			rect: [1,1,31,20],
+			frames: 13,
+			pad: 2,
+			duration: 1,
+		},{
+			rect: [1,23,31,42],
+		},{
+			rect: [1,30,31,64],
+		},{
+			rect: [1,67,31,86],
+		},{
+			rect: [1,89,31,108],
+		},{
+			rect: [1,111,31,130],
 		}],
 	},
 	{
