--- a/data/objects/enemies/incorporeal/zoomer.cfg
+++ b/data/objects/enemies/incorporeal/zoomer.cfg
@@ -13,14 +13,23 @@ properties: {
 															parent:me,
 															sound_file:'ambient/energy-hum.wav'
 														}),
-														spawn('particle_attache', {
-															_particle_type: 'static_shocks',
-															x: mid_x,
-															y: mid_y,
-															parent: me,
-															time_to_die: 200,
-														}),
+
+														add_object(my_particles),
 													]",
+
+#-------------------------- fx --------------------------#
+
+	my_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
+			_particle_type: 'electric_sparks_dancing',
+			parent: me,
+			time_to_die: 50,
+			variable_name: 'my_particles',
+			zsub_order: -1,
+		})",
+		persistent: false,
+	},
 
 
 #-------------------------- metadata --------------------------#
