Additional, subtle tweaks to the zoomer's particles.

--- a/data/objects/enemies/incorporeal/zoomer.cfg
+++ b/data/objects/enemies/incorporeal/zoomer.cfg
@@ -27,6 +27,11 @@ properties: {
 			time_to_die: 50,
 			variable_name: 'my_particles',
 			zsub_order: -1,
+
+			customized_spawn_rects: [{
+				particle_id: 'electric_sparks',
+				rect: [-10, 10, -10, 10],
+			}],
 		})",
 		persistent: false,
 	},
@@ -65,6 +70,6 @@ animation: {
 	frames: 2,
 	pad: 3,
 	duration: 2,
-	attack_area: "all",
+	attack_area: ["solid","all"],
 },
 }
