Failed (but seemingly harmless) attempt at fixing a bug, which we're preserving for posterity.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1237,9 +1237,22 @@ properties: {
 				],[
 					swim(
 						(int(ctrl_right) - int(ctrl_left))*if(ctrl_down or ctrl_up, swim_accel_diag, swim_accel), 
-						(int(ctrl_down) - int(ctrl_up))*if(ctrl_left or ctrl_right, swim_accel_diag, swim_accel) ),
-					if((not (ctrl_left or ctrl_right or ctrl_up or ctrl_down)) and animation in ['swim_side','swim_up','swim_down'],
-						tread_water),
+						(int(ctrl_down) - int(ctrl_up))*if(ctrl_left or ctrl_right, swim_accel_diag, swim_accel)
+					),
+					if(
+						//complex blob of logic here; basically we want to tread water in both the case where no controls are pressed, but also in the case where the horizontal/vertical controls *are* pressed, but they're 'cancelling each other out'
+					
+						((
+							control_signs.x + control_signs.y = 0
+						) where control_signs = {
+								x: int(ctrl_right) - int(ctrl_left),
+								y: int(ctrl_up) - int(ctrl_down)
+							})
+						and
+						animation in ['swim_side','swim_up','swim_down'],
+						
+							tread_water
+					),
 				])
 			],
 
