Fixed the issue with the tread-water animation not playing if multiple controls which cancelled each other out were pressed, simultaneously.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1848,7 +1848,17 @@ on_process: "[
 	if(ctrl_down and (not (ctrl_left or ctrl_right)), crouch()),
 	if((ctrl_down or ctrl_up) and (not (ctrl_left or ctrl_right)), process_movement(0)),
 
-	if((not (ctrl_down or ctrl_up or ctrl_left or ctrl_right)) and underwater, tread_water),
+	if(underwater and 
+		//complex blob of logic here; basically we want to tread water in both the case where no controls are pressed, but also in the case where the horizontal/vertical controls *are* pressed, but they're 'cancelling each other out'
+	
+		((
+			control_signs.x = 0 and control_signs.y = 0
+		) where control_signs = {
+			x: int(ctrl_right) - int(ctrl_left),
+			y: int(ctrl_up) - int(ctrl_down)
+		}), 
+		tread_water
+	),
 
 	if(animation in attack_animations + ['turn'], maintain_locomotion),
 	
