--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -171,7 +171,13 @@ properties: {
 		[set(_key_state[k], { state: false, time_set: cycle }) | k <- keys(_key_state), _key_state[k].state, k not in ctrl_keys],
 		[set(_key_state[k], { state: true, time_set: cycle }) | k <- ctrl_keys, (k not in _key_state) or _key_state[k].state = false],
 	]",
-	ctrl_keyboard: "def(string key_name) ->int|null if(entry and entry.state, cycle - entry.time_set) where entry = _key_state[key_name]",
+	ctrl_keyboard: "def(string key_name) ->int|null 
+		if(size(me.control_lock_registry) = 0, 
+			if(entry and entry.state,
+				cycle - entry.time_set
+			) where entry = _key_state[key_name],
+		)
+	",
 	ctrl_keyboard_released: "def(string key_name) ->int|null if(entry and entry.state = false, cycle - entry.time_set, entry = null, cycle) where entry = _key_state[key_name]",
 	
 
