Commented a todo for a future fix.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -171,6 +171,8 @@ properties: {
 		[set(_key_state[k], { state: false, time_set: cycle }) | k <- keys(_key_state), _key_state[k].state, k not in ctrl_keys],
 		[set(_key_state[k], { state: true, time_set: cycle }) | k <- ctrl_keys, (k not in _key_state) or _key_state[k].state = false],
 	]",
+	
+	/* TODO:  not quite the right fix to ctrl_keyboard + control_lock_registry;  it should actually let you lock them to an on position, rather than just ignoring the non-builtin keys. */
 	ctrl_keyboard: "def(string key_name) ->int|null 
 		if(size(me.control_lock_registry) = 0, 
 			if(entry and entry.state,
