Added a new palette for the first few levels of the swamp.

--- a/data/level/Forest/bothersome-bog.cfg
+++ b/data/level/Forest/bothersome-bog.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"background": "forest-dark-foggy",
 	"background_offset": [0,0],
-	"background_palette": "forest_decay",
+	"background_palette": "forest_swamp",
 	"character": [
 		{
 			"_uuid": "c85c509ac3f34740ab95c0221fe0c13d",
@@ -1333,7 +1333,7 @@
 	"id": "bothersome-bog.cfg",
 	"music": "DangerSwamp.ogg",
 	"next_level": "moribund-muck.cfg",
-	"palettes": ["forest_decay"],
+	"palettes": ["forest_swamp"],
 	"preloads": "",
 	"previous_level": "sweltering-swamp.cfg",
 	"segment_height": 0,
