--- a/data/level/Forest/moribund-muck.cfg
+++ b/data/level/Forest/moribund-muck.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"background": "forest-dark-foggy",
 	"background_offset": [0,0],
-	"background_palette": "forest_decay",
+	"background_palette": "forest_swamp",
 	"character": [
 		{
 			"_uuid": "df473a55118e4ac890b5d8f2e959257d",
@@ -1131,7 +1131,7 @@
 	"id": "moribund-muck.cfg",
 	"music": "DangerSwamp.ogg",
 	"next_level": "murky-mire.cfg",
-	"palettes": ["forest_decay"],
+	"palettes": ["forest_swamp"],
 	"preloads": "",
 	"previous_level": "bothersome-bog.cfg",
 	"segment_height": 0,
