--- a/data/level/Forest/sweltering-swamp.cfg
+++ b/data/level/Forest/sweltering-swamp.cfg
@@ -3,7 +3,7 @@
 	"auto_move_camera": [0,0],
 	"background": "forest-dark-foggy",
 	"background_offset": [0,0],
-	"background_palette": "forest_decay",
+	"background_palette": "forest_swamp",
 	"character": [
 		{
 			"_uuid": "8e1d378787a74ea9851940e92134fade",
@@ -798,13 +798,152 @@
 			"type": "save_statue",
 			"x": 4925,
 			"y": 825
+		},
+		{
+			"_uuid": "760322dc787642e5b4b28157731d8cd9",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6098d2ba",
+			"type": "mushroom_foreground3",
+			"x": -181,
+			"y": 305
+		},
+		{
+			"_uuid": "3169864cc3194bb1916deaa2a1559f92",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_50f69cd9",
+			"type": "mushroom_foreground3",
+			"x": 1648,
+			"y": 435
+		},
+		{
+			"_uuid": "7f7ea91e68f94118b2f9336c74535fa9",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_366c431f",
+			"type": "mushroom_foreground1",
+			"x": 1412,
+			"y": 524,
+			"zsub_order": 1
+		},
+		{
+			"_uuid": "d1b4ee22904348db936d07531d9ecf2a",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_625858c4",
+			"type": "mushroom_foreground1",
+			"x": 582,
+			"y": 527
+		},
+		{
+			"_uuid": "9438d2b9a7684dfda82486ad9a8a4e1e",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_1c0b3725",
+			"type": "mushroom_foreground1",
+			"x": 3569,
+			"y": 617
+		},
+		{
+			"_uuid": "d67a77a1a6bc4f4faa75073bd4a40a14",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_328ce11c",
+			"type": "mushroom_foreground3",
+			"x": 3888,
+			"y": 604
+		},
+		{
+			"_uuid": "a338e7d8287744d3abf69158a7a5b824",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_75effb8e",
+			"type": "mushroom_foreground3",
+			"x": 6462,
+			"y": 678
+		},
+		{
+			"_uuid": "dd830e27d18a45a6bbc7243acbe1ca6b",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_74bd1260",
+			"type": "mushroom_foreground1",
+			"x": 5991,
+			"y": 678
+		},
+		{
+			"_uuid": "e70a941913d140c5813998bb5ff977ec",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_2fe06fd9",
+			"type": "mushroom_foreground2",
+			"x": 6740,
+			"y": 742,
+			"zsub_order": 1
+		},
+		{
+			"_uuid": "f45596bc8f2c44b9b11970d51ab0920e",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_2c711e3f",
+			"type": "mushroom_foreground1",
+			"x": 7108,
+			"y": 608
+		},
+		{
+			"_uuid": "91e3cfbc427f464dad96aaad6f506134",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_602a2ee3",
+			"type": "mushroom_foreground3",
+			"x": 7570,
+			"y": 589
+		},
+		{
+			"_uuid": "6c88c75af21c4dab86b11a046eda0e01",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_7a06a9a0",
+			"type": "mushroom_foreground3",
+			"x": 7336,
+			"y": -34
+		},
+		{
+			"_uuid": "9ecb70c7ae094054b1fe5be25e57be48",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_3c77a94c",
+			"type": "mushroom_foreground1",
+			"x": 4695,
+			"y": 159
+		},
+		{
+			"_uuid": "1e6674b9f60549debf563f2b42b12b1d",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_2340b4ae",
+			"type": "mushroom_foreground1",
+			"x": 2884,
+			"y": 433
 		}
 	],
 	"dimensions": [-1056,0,7455,1055],
 	"id": "sweltering-swamp.cfg",
 	"music": "DangerSwamp.ogg",
 	"next_level": "bothersome-bog.cfg",
-	"palettes": ["forest_decay"],
+	"palettes": ["forest_swamp"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
