--- a/data/level/Forest/sweltering-swamp.cfg
+++ b/data/level/Forest/sweltering-swamp.cfg
@@ -243,8 +243,8 @@
 			"custom": true,
 			"label": "_799329bc",
 			"type": "thunder_melon",
-			"x": 6112,
-			"y": 721
+			"x": 6176,
+			"y": 305
 		},
 		{
 			"_uuid": "631ffb0dcfd54ee39b4a068d060d174d",
@@ -357,8 +357,9 @@
 			"label": "_d236577",
 			"property_data": {
 				"_move_x1": 608,
-				"_move_y1": 272,
+				"_move_y1": 240,
 				"_move_y2": 432,
+				"actual_speed": 1.30208,
 				"is_zipline": false,
 				"rope_height": 28,
 				"stopped": 0,
@@ -443,26 +444,6 @@
 			"y": 358
 		},
 		{
-			"_uuid": "719ebd19817e4b2cb4c9e756f4c26707",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_7ea6b76d",
-			"type": "mushroom_shooter_red",
-			"x": 2208,
-			"y": 543
-		},
-		{
-			"_uuid": "d5294a3dc9044f44bc2bb9b2520fe34e",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_7b95e01a",
-			"type": "mushroom_shooter_red",
-			"x": 1568,
-			"y": 511
-		},
-		{
 			"_uuid": "95d1ec1b4a7b455b804b7bfb853d13a6",
 			"current_frame": "normal",
 			"custom": true,
@@ -476,66 +457,6 @@
 			"type": "moth_small",
 			"x": 1536,
 			"y": 32
-		},
-		{
-			"_uuid": "3849cc8c00844101ab22ecdf98d63e5d",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_6afcd993",
-			"type": "mushroom_shooter_red",
-			"x": 1920,
-			"y": 447
-		},
-		{
-			"_uuid": "aea69ce84c484aa291fe64cb0d85cf10",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_3c3aafe8",
-			"type": "mushroom_shooter_red",
-			"x": 6272,
-			"y": 607
-		},
-		{
-			"_uuid": "78884005257d471b9c39967b0cf15774",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_294e5c34",
-			"type": "mushroom_shooter_red",
-			"x": 6432,
-			"y": 223
-		},
-		{
-			"_uuid": "d114b8ad82bf40238898160406619ddf",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_6e200a2e",
-			"type": "mushroom_shooter_red",
-			"x": 6848,
-			"y": 607
-		},
-		{
-			"_uuid": "aa03adf9983a4b46862519f2d3edfb2d",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_7c70fd5a",
-			"type": "mushroom_shooter_red",
-			"x": 6560,
-			"y": 767
-		},
-		{
-			"_uuid": "86ea3f9912cc429fada66c20a19c9524",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_7db6a3a8",
-			"type": "mushroom_shooter_red",
-			"x": 6944,
-			"y": 95
 		},
 		{
 			"_uuid": "a1c6399e2e504909a0ac8a117328e869",
@@ -675,16 +596,6 @@
 			"type": "mushroom_throwable_respawning",
 			"x": 3104,
 			"y": 512
-		},
-		{
-			"_uuid": "1f2d6d693e5f4728a61d6449c32f6cd2",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_37877373",
-			"type": "mushroom_throwable_respawning",
-			"x": 1280,
-			"y": 480
 		},
 		{
 			"_uuid": "958e04e80c6d4879b289d76a1dc4db7a",
@@ -937,6 +848,128 @@
 			"type": "mushroom_foreground1",
 			"x": 2884,
 			"y": 433
+		},
+		{
+			"_uuid": "398d80897d9c4a57963cc16c0b848bc0",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7f4d265d",
+			"property_data": {
+				"original_level_we_spawned_on": "sweltering-swamp.cfg"
+			},
+			"type": "mushroom_walker_green",
+			"x": 2193,
+			"y": 543
+		},
+		{
+			"_uuid": "38c9a82920754fefa0e691f1ba9a201d",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_28f07381",
+			"property_data": {
+				"original_level_we_spawned_on": "sweltering-swamp.cfg"
+			},
+			"type": "mushroom_walker_green",
+			"x": 1905,
+			"y": 447
+		},
+		{
+			"_uuid": "94f313a3c38548098b04c1d10bc7f9df",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_37910e8f",
+			"property_data": {
+				"original_level_we_spawned_on": "sweltering-swamp.cfg"
+			},
+			"type": "mushroom_walker_green",
+			"x": 1585,
+			"y": 511
+		},
+		{
+			"_uuid": "5b2a23b5eb5549f480c9d83b3921fb48",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1ae7fa4a",
+			"property_data": {
+				"original_level_we_spawned_on": "sweltering-swamp.cfg"
+			},
+			"type": "mushroom_walker_green",
+			"x": 6833,
+			"y": 607
+		},
+		{
+			"_uuid": "935082f584944b8c8877cc17524d424b",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_4b800754",
+			"property_data": {
+				"original_level_we_spawned_on": "sweltering-swamp.cfg"
+			},
+			"type": "mushroom_walker_green",
+			"x": 6560,
+			"y": 767
+		},
+		{
+			"_uuid": "7ff0bef9291946c68676f8b4f1e7b543",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_4eb7facd",
+			"property_data": {
+				"original_level_we_spawned_on": "sweltering-swamp.cfg"
+			},
+			"type": "mushroom_walker_green",
+			"x": 6225,
+			"y": 607
+		},
+		{
+			"_uuid": "374d615028714249bf4c11d4d9db3297",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2e1a5688",
+			"property_data": {
+				"original_level_we_spawned_on": "sweltering-swamp.cfg"
+			},
+			"type": "mushroom_captosser_blue",
+			"x": 6432,
+			"y": 223
+		},
+		{
+			"_uuid": "a5b3add84daf43759b699b6f462f8990",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7c21e703",
+			"property_data": {
+				"original_level_we_spawned_on": "sweltering-swamp.cfg"
+			},
+			"type": "mushroom_walker_green",
+			"x": 6961,
+			"y": 95
+		},
+		{
+			"_uuid": "df02151d86f14804b163fa0fc3be7428",
+			"activation_area": [4552,-56,6551,3443],
+			"current_frame": "fly1",
+			"custom": true,
+			"label": "_1a010d46",
+			"property_data": {
+				"_desired_height": 144,
+				"_dive_height": 432,
+				"_x2_bound": 5776,
+				"_x_bound": 5328,
+				"original_level_we_spawned_on": "sweltering-swamp.cfg"
+			},
+			"type": "ploompus",
+			"x": 5494,
+			"y": 86
+		},
+		{
+			"_uuid": "b8ad8223cb334e429036079e378b2cb8",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_32d6b381",
+			"type": "mushroom_throwable_respawning",
+			"x": 1728,
+			"y": 480
 		}
 	],
 	"dimensions": [-1056,0,7455,1055],
@@ -1144,8 +1177,8 @@ frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,
 frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,frg,frg,frg
-frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg
 frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,frg,frg,frg
 frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
