--- a/data/objects/enemies/milgramen/milgram_slab.cfg
+++ b/data/objects/enemies/milgramen/milgram_slab.cfg
@@ -32,7 +32,7 @@ on_process_walk: "if((facing < 0 and level.player.mid_x < mid_x or
 	                      facing > 0 and level.player.mid_x > mid_x)
 						 and abs(level.player.mid_x - mid_x) < 100 and abs(velocity_x) > 300,
 	                     [animation('dive')])",
-on_enter_dive_anim: "[set(velocity_y,-700),set(velocity_x,450*facing)]",
+on_enter_dive_anim: "[set(velocity_y,-700), set(velocity_x,450*facing)]",
 on_end_walk_anim: "animation('walk')",
 on_collide_side: "if(animation in ['walk'], [set(facing, -facing), set(velocity_x, 0)])",
 on_end_dive_anim: "animation('fall')",
@@ -42,15 +42,19 @@ on_end_prone_anim: "[animation('getup'),schedule(10,play_sound__falloff('milgram
 on_end_getup_anim: "animation('stand')",
 on_bounced_on: "if(is_invincible_posthit,null,
 					if(animation in ['getup','prone','land'],
-						[get_hit_sourceless(enum impact,1), animation('land'),sound_falloff('kitty-squish.wav')]
-				))",
+						[
+							get_hit_sourceless(enum impact,1),
+							animation('land'),
+							sound_falloff('kitty-squish.wav'),
+						]
+					)
+				)",
 		
 		
 		
 on_die: "[handle_death(level.player), spawn('die_cloud', mid_x, mid_y, facing)]",
-on_change_animation_failure: "[resolve_solid(me,1,0), resolve_solid(me,-1,0), resolve_solid(me,0,-1)]",
 solid_area: [10,10,42,40],
-solid_dimensions: ["enemy","common"],
+
 
 on_footfall: "play_sound__falloff('footstep-medium-heavy')",
 
@@ -102,7 +106,7 @@ animation: [
 		frames: 1,
 		pad: 3,
 		attack_area: [29,11,60,47],
-		solid_area: [10,25,42,40],
+		solid_area: [10,32,42,40],
 	},
 	{
 		accel_x: 0,
@@ -115,7 +119,7 @@ animation: [
 		frames: 4,
 		pad: 3,
 		attack_area: [29,32,60,47],
-		solid_area: [10,25,42,40],
+		solid_area: [10,32,42,40],
 	},
 	{
 		accel_x: 0,
