Set up the bossfight screenlocking for the milgram slab to lock itself adaptively to the actual screen size, rather than a fixed box.

--- a/data/level/Dungeon/killer-bunnies.cfg
+++ b/data/level/Dungeon/killer-bunnies.cfg
@@ -698,25 +698,44 @@
 			       [set(child.is_a_boss, true),
 			        set(child.event_handlers.create,
 					     q(if(level.player.get_stored_event('killer_bunnies_faux_boss_fight_won'), remove_object(me))) ),
-					set(child.event_handlers.die,
-					     q([
-			level.player.store_event('killer_bunnies_faux_boss_fight_won',1),
-			set_solid(3400, -1720, 3424, -1096, false),
-			set_solid(4236, -1720, 4240, -1096, false),
-			set(level.lock_screen, null),
-			title('Victory!'),
-			spawn('padlock_key',midpoint_x, midpoint_y-150,{valid_levels: ['killer-bunnies.cfg'], color:'purple'},animation('normal')),
-			lib.audio.play_music(me,'FrogattoTitle.ogg'),
-			lib.audio.play_music(me,'specialitem.ogg', [enum music_once]),
-		]))]),
+					set(child.event_handlers.die,  q([
+						level.player.store_event('killer_bunnies_faux_boss_fight_won',1),
+						set_solid(3818 - screen_w/2 - 32, solid_box_top, 3818 - screen_w/2     , solid_box_bottom, false),
+						set_solid(3818 + screen_w/2     , solid_box_top, 3818 + screen_w/2 + 32, solid_box_bottom, false),
+			
+			
+						set(level.lock_screen, null),
+						title('Victory!'),
+						spawn('padlock_key',midpoint_x, midpoint_y-150,{valid_levels: ['killer-bunnies.cfg'], color:'purple'},animation('normal')),
+						lib.audio.play_music(me,'FrogattoTitle.ogg'),
+						lib.audio.play_music(me,'specialitem.ogg', [enum music_once]),
+					]
+						where screen_w = level.camera_position[2]
+						where screen_h = level.camera_position[3]
+						where solid_box_top = -1720
+						where solid_box_bottom = -1096					
+					)
+				)
+			]
+		),
 
-		set(level.lock_screen, [3832, -1200]),
-		set_solid(3400, -1720, 3424, -1096, true),
-		set_solid(4236, -1720, 4240, -1096, true),
+		set(level.lock_screen, [3818, -1200]),
+		set_solid(3818 - screen_w/2 - 32, solid_box_top, 3818 - screen_w/2     , solid_box_bottom, true),
+		set_solid(3818 + screen_w/2     , solid_box_top, 3818 + screen_w/2 + 32, solid_box_bottom, true),
+
 		lib.audio.play_music(me,'neoBoss.ogg'),
 		transient_speech_dialog(level.player, [~That guy sure doesn't look glad to meet me!~]),
 		die()
-	]",
+		
+	]
+		where screen_w = level.camera_position[2]
+		where screen_h = level.camera_position[3]
+		where solid_box_top = -1720
+		where solid_box_bottom = -1096
+	
+	
+	",
+		
 			"property_data": {
 				"_x2_bound": 4448,
 				"_x_bound": 3520,
