Did a proper fix for #529.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -97,7 +97,7 @@ properties: {
 	
 		#-- debug flags --#	
 	should_debug_output_damage_values: "bool :: false",
-	should_debug_output_bad_collision_state_deaths: "bool :: true",
+	should_debug_output_bad_collision_state_deaths: "bool :: false",
 
 
 		#-- thrown object info --#	
