--- a/data/object_prototypes/base/throwable.cfg
+++ b/data/object_prototypes/base/throwable.cfg
@@ -204,15 +204,15 @@ on_stuck: "if(not solid(level, midpoint_x, y+self.img_h-10), add(velocity_y, -12
 		If we're not colliding with an object, but instead are colliding with terrain, then just immediately die.
 	*/
 on_change_solid_dimensions_fail: "
-	if(true, //thing is obj hittable,
+	if(collide_with is obj hittable,
 		if(in_change_dimensions_fail > 15,
 			die_from_bad_collision_state,
-			/*[
+			[
 				add(in_change_dimensions_fail, 1),
-				add(velocity_x, if(thing.midpoint_x > midpoint_x, -500,500))
-			]*/
+				add(velocity_x, if(collide_with.midpoint_x > midpoint_x, -500,500))
+			]
 		),
 		die_from_bad_collision_state
-	)",
+	) where collide_with = arg.collide_with",
 			  
 }
