Made worms immune to lacerate and impale damage types, as they typically spawn in bramble patches, and were instantly killing themselves on spawning.

--- a/data/objects/enemies/bugs/worm_jumping.cfg
+++ b/data/objects/enemies/bugs/worm_jumping.cfg
@@ -46,8 +46,13 @@ properties: {
 	handle_special_damage_response: "def(DamageType damage_type, int final_damage_amount, bool will_die) -> commands execute(me,
 			map(_segments, if(not value in live_segments_at_this_hp(me.hitpoints - final_damage_amount) and value.hitpoints > 0, value.trigger_death))
 		)",
-
 		
+	/*
+		Special immunity to impale damage;  these guys almost always spawn in spikes, and need to not die to them.
+	*/
+	handle_custom_damage_type_modifications: "def(DamageType damage_type, int amount) -> int|null
+		if(damage_type = enum impale or damage_type = enum lacerate, 0, null)
+	",		
 		
 #-------------------------- core behavior settings --------------------------#
 
